lab1/Test/L1-A-7-9.output
Error Type A at Line 6
Error Type A at Line 24
