lab1/Test/L1-A-7-9.cmm
struct pgdz {
  int ppyq ;
};
int D5wWevAB6 ( int HTOfOnXYrWQdWrm , int Kl0ROKWh 
  ) {
  if ( dfVya4wHBO5bU3M )   while ( PuX )   if @( Iy 
    )   return qLnl ;
else   {
    struct {
      int SokuGdOzvEf ;
      struct hNH H164DFeOyfGPS1I5oCZF ;
      struct _TUjd2g1i2cv d8BzD56NF7x0LUHB4XB ;
      float kDVMbZGTzLoX9cB87Clc ;
      int rirsyDEOCw , NAy0fF ;
    }bm_EI9jvQdk0sRuiV [ 2072065592 ] = N3_lpHG2ewnqJDY9VI 
      ;
    YLqCG = j01GHp2PuACjruVCLgg || fXgOAhF40Y2 < BV5MqlAQ2vX5 
      - tNrQ7RQpEqz35gB * ( YuAau_MkAQUK && SQ7oQsx != fv 
      + Gn7JM8OTqX9 / ! - - ! YcXu8rLWVB [ cJl6FtYG_mccz36CrPCM 
      || oqU0GfhE3umYBnpqOc && WM3T <= ! i3 ( jt4EOqSjvmT 
      , VQg_ILFU6PEIhIKA9oFQ = gmb = Pssinc == AaPv22Kt9T4 
      . vmZrN >= 714343083.637514455 > 681206486 + g6cYG5i6ZM 
      ( ) ) ] ) . QvWcpQTl0OV4ik ;
  }'



}
int ;
int galnb4W3 , E2y6 

;
int ;
int TxHzBNSPhxgk2V ( ) {
}
int ovNdP_271piKMfnXM ( ) {
}
int ;
int xKzp7RdOkj_pm ( ) {
}
int r96rxfudVFLJsBNUuFF5 ( ) {
}
int ;
int BA2bac ( ) {
}
int ;
int ;
int fSdQ ( ) {
  if ( Qws )   YTeFfJ ;
else   KZNtOTcv3P ;

}
int ;
int ;
int ;
int ;
int ;
int ;
int ;
int ;
int OoW61 ( ) {
  if ( lFAqhu8koZPJe0nTQ )   jUbX1Jpo ;
else   if ( h5tfpTq6NTPd7jCc )   du23kmNs7tq3GoCJQb 
    ;


}
